Add full log path setting to settings

--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,8 @@
-# Set the directory for logs
+# Configuration file for FreshPi
+# Logging
+# LOG_DIR: Directory where logs will be stored
+# LOG_FILE: Name of the log file for update and upgrade logs.
+# LOG_PATH: Full path to the log file
 LOG_DIR="/var/log/freshpi"
-
-# Set the filename for logs
 LOG_FILE="freshpi.log"
+LOG_PATH="$LOG_DIR/$LOG_FILE"
