Add color to status messages

--- a/config.conf
+++ b/config.conf
@@ -6,3 +6,17 @@
 LOG_DIR="/var/log/freshpi"
 LOG_FILE="freshpi.log"
 LOG_PATH="$LOG_DIR/$LOG_FILE"
+
+# Color console output
+RED='\033[0;31m'
+GREEN='\033[0;32m'
+YELLOW='\033[0;33m'
+BLUE='\033[0;34m'
+PURPLE='\033[0;35m'
+CYAN='\033[0;36m'
+WHITE='\033[0;37m'
+RESET='\033[0m'
+
+INFO_COLOR=${CYAN}
+SUCCESS_COLOR=${GREEN}
+FAILURE_COLOR=${RED}
