--- a/config.conf
+++ b/config.conf
@@ -7,7 +7,7 @@ LOG_DIR="/var/log/freshpi"
 LOG_FILE="freshpi.log"
 LOG_PATH="$LOG_DIR/$LOG_FILE"
 
-# Color console output
+# Standard ASCII colors
 RED='\033[0;31m'
 GREEN='\033[0;32m'
 YELLOW='\033[0;33m'
@@ -17,6 +17,12 @@ CYAN='\033[0;36m'
 WHITE='\033[0;37m'
 RESET='\033[0m'
 
+# Color console output
+# INFO_COLOR: The color for the i in information messages
+# SUCCESS_COLOR: The color for the checkmark in success messages
+# FAILURE_COLOR: The color for the x in failure messages
+# WARNING_COLOR: The color fo the w in warning messages
 INFO_COLOR=${CYAN}
 SUCCESS_COLOR=${GREEN}
 FAILURE_COLOR=${RED}
+WARNING_COLOR=${YELLOW}
