Add date format options

--- a/config.conf
+++ b/config.conf
@@ -26,3 +26,10 @@ INFO_COLOR=${CYAN}
 SUCCESS_COLOR=${GREEN}
 FAILURE_COLOR=${RED}
 WARNING_COLOR=${YELLOW}
+
+# Time and date format for log entries
+# DATE_FORMAT: The date format for log entries
+# LOG_DATE_FORMAT: The date format for log rotations
+# Reference: date --help for FORMAT control sequences
+DATE_FORMAT="%F %T%Z"
+LOG_DATE_FORMAT="%Y%m%d%H%M"
