Add configuration for max logs to keep

--- a/config.conf
+++ b/config.conf
@@ -33,3 +33,7 @@ WARNING_COLOR=${YELLOW}
 # Reference: date --help for FORMAT control sequences
 DATE_FORMAT="%F %T%Z"
 LOG_DATE_FORMAT="%Y%m%d%H%M"
+
+# Logging
+# MAX_LOG_FILES: The number of old log files to keep
+MAX_LOG_FILES=2
