Add purging old log files to log rotation

--- a/config.conf
+++ b/config.conf
@@ -28,9 +28,13 @@ FAILURE_COLOR=${RED}
 WARNING_COLOR=${YELLOW}
 
 # Time and date format for log entries
+# Reference: date --help for FORMAT control sequences
 # DATE_FORMAT: The date format for log entries
 # LOG_DATE_FORMAT: The date format for log rotations
-# Reference: date --help for FORMAT control sequences
+#
+# **WARNING: Log rotation relies on archived log file names sorting from oldest
+# to newest. Alterting LOG_DATE_FORMAT may result in unreliable deletion of
+# previously archived log files.
 DATE_FORMAT="%F %T%Z"
 LOG_DATE_FORMAT="%Y%m%d%H%M"
 
