Change log date format Change the log date format to include seconds and added a warning about ensuring sufficiently unique log names.

--- a/config.conf
+++ b/config.conf
@@ -34,9 +34,11 @@ WARNING_COLOR=${YELLOW}
 #
 # **WARNING: Log rotation relies on archived log file names sorting from oldest
 # to newest. Alterting LOG_DATE_FORMAT may result in unreliable deletion of
-# previously archived log files.
+# previously archived log files. Additionally, the date format should be
+# sufficiently unique as to always generate a unigue name, or logs could be
+# overridden. 
 DATE_FORMAT="%F %T%Z"
-LOG_DATE_FORMAT="%Y%m%d%H%M"
+LOG_DATE_FORMAT="%Y%m%d%H%M%S"
 
 # Logging
 # MAX_LOG_FILES: The number of old log files to keep
