Change to consistent quote style

--- a/config.conf
+++ b/config.conf
@@ -8,14 +8,14 @@ LOG_FILE="freshpi.log"
 LOG_PATH="$LOG_DIR/$LOG_FILE"
 
 # Standard ASCII colors
-RED='\033[0;31m'
-GREEN='\033[0;32m'
-YELLOW='\033[0;33m'
-BLUE='\033[0;34m'
-PURPLE='\033[0;35m'
-CYAN='\033[0;36m'
-WHITE='\033[0;37m'
-RESET='\033[0m'
+RED="\033[0;31m"
+GREEN="\033[0;32m"
+YELLOW="\033[0;33m"
+BLUE="\033[0;34m"
+PURPLE="\033[0;35m"
+CYAN="\033[0;36m"
+WHITE="\033[0;37m"
+RESET="\033[0m"
 
 # Color console output
 # INFO_COLOR: The color for the i in information messages
